# streamlit-rbac

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TASK.md  cspell.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  REQUIREMENTS.md  SPECIFICATION.md
example/: README.ja.md  README.md  app.py  common.py
example/pages/: Manager.py  User.py
examples/: app.py
examples/pages/: Admin.py  Home.py  Manager.py
src/streamlit_rbac/: __init__.py  _core.py  _decorators.py  _exceptions.py  _streamlit.py  _types.py
tests/: test_core.py  test_decorators.py  test_init.py  test_streamlit.py
